# revm-api

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  contractsgen.sh  go.mod  go.sum  lib.go  lib_test.go  lib_utils_test.go
.github/: CODEOWNERS
.github/workflows/: build.yml  lint.yml  merge.yml  release.yml  setup.yml
Base/: LOG
api/: aot_compiler.go  bindings.h  callbacks.go  callbacks_cgo.go  compiler.go  compiler_test.go  cron.go  exposed.go  exposed_test.go  kv_store.go  kv_store_test.go  lib.go  librevmapi.dylib  link_macos.go  link_muslc.go  link_system.go  memory.go  mock.go  mocks.go  vm.go  vm_test.go
benchmark/: Dockerfile.gevm  Dockerfile.revmffi  docker-compose.yml  go.mod  go.sum
benchmark/contracts/erc20/: ERC20.go  ERC20.sol
benchmark/contracts/uniswap/core/UniswapV2ERC20/: UniswapV2ERC20.go
benchmark/contracts/uniswap/core/UniswapV2Pair/: UniswapV2Pair.go  UniswapV2Pair.sol
benchmark/contracts/uniswap/core/interfaces/IUniswapV2Callee/: IUniswapV2Callee.go
benchmark/contracts/uniswap/core/libraries/Math/: Math.go
benchmark/contracts/uniswap/core/libraries/SafeMath/: SafeMath.go
benchmark/contracts/uniswap/periphery/UniswapV2Router01/: UniswapV2Router01.sol
benchmark/gevm/: Dockerfile.gevm  benchmark.go  gevm_test.go  go.mod  go.sum
benchmark/revmffi/: Dockerfile.revmffi  benchmark.go  go.mod  go.sum  revmffi.go  revmffi_test.go
builders/: Dockerfile.debian  Makefile  README.md
builders/guest/: build_gnu_aarch64.sh  build_gnu_x86_64.sh  build_linux.sh  build_macos.sh  build_windows.sh
contracts/Call/: Call.sol  CallTest.go
contracts/Counter/: Counter.go  Counter.sol
contracts/Erc20/: ERC20.go
contracts/Fibonacci/: Fibonacci.go  Fibonacci.sol
contracts/Test/: Test.go  Test.sol
contracts/erc20/: ERC20.go  ERC20.sol
contracts/erc20_factory/: ERC20Factory.go
contracts/erc20_registry/: ERC20Registry.go
contracts/ownable/: Ownable.go
contracts/uniswap/core/UniswapV2ERC20/: UniswapV2ERC20.sol
contracts/uniswap/core/UniswapV2Factory/: UniswapV2Factory.go  UniswapV2Factory.sol
contracts/uniswap/core/interfaces/IUniswapV2ERC20/: IUniswapV2ERC20.go
contracts/uniswap/core/interfaces/IUniswapV2Factory/: IUniswapV2Factory.go
contracts/uniswap/core/interfaces/IUniswapV2Pair/: IUniswapV2Pair.go
contracts/uniswap/core/libraries/UQ112x112/: UQ112x112.go
contracts/uniswap/periphery/UniswapV2Router01/: UniswapV2Router01.go
contracts/uniswap/periphery/UniswapV2Router02/: UniswapV2Router02.go  UniswapV2Router02.sol
contracts/uniswap/periphery/interfaces/IERC20/: IERC20.go
contracts/uniswap/periphery/interfaces/IUniswapV2Router02/: IUniswapV2Router02.go  IUniswapV2Router02.sol
contracts/uniswap/periphery/libraries/UniswapV2Library/: UniswapV2Library.go  UniswapV2Library.sol
contracts/utils/: ERC721Utils.go
core/: bindings.h  callbacks.go  callbacks_cgo.go  evm.go  lib.go  librevmapi.dylib  link_linux_glibc_aarch64.go  link_linux_glibc_x86_64.go  link_macos.go  memory.go
crates/database/interface/src/: lib.rs
crates/interpreter/: Cargo.toml
crates/precompile/: README.md
crates/primitives/: Cargo.toml
crates/primitives/src/: db.rs  env.rs  state.rs
crates/revm/: Cargo.toml
crates/revm/src/: context.rs  evm.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  state_view.rs
crates/types/: Cargo.toml
crates/types/src/: access_path.rs  account.rs  cosmos.rs  entry_function.rs  env.rs  gas_usage.rs  lib.rs  message.rs  script.rs  staking_change_set.rs  write_set.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs  revm.rs
docs/: librevm_builds.py
librevm/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
librevm/data/: 000080.ldb  000082.ldb  LOG  LOG.old  MANIFEST-000081
librevm/src/: aot.rs  api.rs  block.rs  cron.rs  db.rs  env.rs  evmdb.rs  ext.rs  gstorage.rs  interface.rs  jit.rs  leveldb.rs  lib.rs  memory.rs  paths.rs  runtime.rs  state.rs  storage.rs  store.rs  storeutils.rs  table_storage.rs  tests.rs  tracer.rs  tx.rs  utils.rs  vm.rs
librevm/src/aot/: cfg.rs  compiler.rs  cron.rs  key.rs  sled.rs
librevm/src/compiler/: aot.rs  key.rs  mod.rs  path.rs  sleddb.rs  worker.rs
librevm/src/compiler/test/: test.rs  utils.rs
librevm/src/error/: backend.rs  compiler.rs  ext.rs  go.rs  mod.rs  rust.rs  tracer.rs
librevm/src/handler/: account.rs  account_end_handler.rs  bank.rs  bank_end_handler.rs  mod.rs
librevm/src/jit/: cfg.rs  cron.rs  key.rs  leveldb.rs  sled.rs
librevm/src/state/: evmdb.rs  evmkey.rs  gstorage.rs  mod.rs  statedb.rs  util.rs
librevm/src/states/: cache.rs  cachedb.rs  evmkey.rs  getter.rs  godb.rs  gstorage.rs  mod.rs  setter.rs  statedb.rs  vtable.rs
librevm/src/types/: account.rs  block.rs  mod.rs  state.rs  transaction.rs
librevm/src/utils/: encode.rs  env.rs  mod.rs
proto/evm/v1/: account.proto  block.proto  result.proto  state.proto  transaction.proto
revmcd/: Cargo.toml
revmcd/src/: main.rs
scripts/: contractsgen.sh  flatbuffer-gen.sh  protobufgen.sh
state/: statedb.go
testutils/: accountInfo.go  mock.go  mockenv.go  utils.go
tools/precompile/src/: main.rs
types/: README.md  account.pb.go  accountInfo.go  block.pb.go  env.go  msg.go  result.pb.go  state.pb.go  transaction.pb.go
types/flatbuffer/: account.fbs  bank.fbs  block.fbs  evm_result.fbs  transaction.fbs
types/go/: accountInfo.go  env.go  keys.go  msg.go  result.go
types/go/account/: AccountRecord.go  AccountRecords.go
types/go/bank/: BankAction.go  BankRecord.go  BankRecords.go
types/go/block/: Block.go
types/go/result/: Call.go  Create.go  Error.go  EvmResult.go  ExResult.go  Halt.go  HaltReasonEnum.go  Log.go  LogData.go  Output.go  Revert.go  Success.go  SuccessCall.go  SuccessCreate.go  SuccessReasonEnum.go  Topic.go
types/go/transaction/: AccessListItem.go  StorageKey.go  Transaction.go  TransactionType.go
types/rust/: Cargo.toml
types/rust/src/: account_generated.rs  bank_generated.rs  block_generated.rs  evm_result_generated.rs  lib.rs  transaction_generated.rs
(+5 files in other folders)
