[workspace]
resolver = "2"

members = [
	"librevm",
	"types/rust",
]

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.bench]
debug = true

[profile.dev]
debug = true


# use release settings to reduce memory pressure in the linking step in CI
[profile.ci]
inherits = "test"
opt-level = 3
debug = 0           # for saving disk space during linking
incremental = false
codegen-units = 16

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["rethmint"]
keywords = ["cosmos-sdk", "revm", "crypto"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/rethmint/revm-api"
rust-version = "1.81.0"


[workspace.dependencies]
bytes = "1.4.0"
thiserror = "1.0.34"
errno = "0.3.0"
flatbuffers = "24.3.25"

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
anyhow = "1.0.41"
clru = "0.6"
cbindgen = "0.26.0"
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.188", default-features = false, features = [
	"derive",
	"rc",
] }
serde_json = { version = "1.0.94" }

revm = "18.0.0"

