[workspace]
resolver = "2"

members = ["librevm"]

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.bench]
debug = true

[profile.dev]
debug = true


# use release settings to reduce memory pressure in the linking step in CI
[profile.ci]
inherits = "test"
opt-level = 3
debug = 0           # for saving disk space during linking
incremental = false
codegen-units = 16

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["0xEyrie"]
keywords = ["ffi", "revm", "crypto", "execute engine"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/0xEyrie/revmc-ffi"
rust-version = "1.81.0"


[workspace.dependencies]
bytes = "1.4.0"
thiserror = "1.0.34"
errno = "0.3.0"

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
anyhow = "1.0.41"
clru = "0.6"
cbindgen = "0.26.0"
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.188", default-features = false, features = [
	"derive",
	"rc",
] }
serde_json = { version = "1.0.94" }
sha2 = "0.10.8"
sha3 = "0.10.6"
smallvec = "1.6.1"
tempfile = "3.2.0"
serial_test = "1.0.0"
tsu = "1.0.1"
parking_lot = "0.12.1"
base64 = "0.21.7"
bigdecimal = "0.4"
triomphe = "0.1.9"
revm = { version = "18.0", default-features = false }
revm-primitives = { version = "14.0", default-features = false }
revm-interpreter = { version = "14.0", default-features = false }
revmc = { git = "https://github.com/0xEyrie/revmc", rev = "0d138b6c42ed52b735f6c8604655dc76d15b1efa" }
prost = "0.11"
prost-types = "0.11"