[package]
name = "revmapi"
version = "0.0.1"
publish = false
description = "Reth Revm Engine"
repository = "https://github.com/rethmint/revm-api"
exclude = [".gitignore"]
edition = { workspace = true }
rust-version = { workspace = true }

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
flatbuffer_types = { path = "../types/rust" }
flatbuffers = { workspace = true }
errno = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
alloy-primitives = { version = "0.8.2", default-features = false, features = [
	"rlp",
] }
# state = { workspace = true }
revm = { workspace = true }


[build-dependencies]
cbindgen = { workspace = true }
