[package]
name = "revmapi"
version = "0.0.1"
publish = false
description = "Revm Engine FFI API"
repository = "https://github.com/rethmint/revm-api"
exclude = [".gitignore"]
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
flatbuffer_types = { path = "../types/rust" }
flatbuffers = { workspace = true }
errno = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
alloy-primitives = { version = "0.8.2", default-features = false, features = [
	"rlp",
] }
# state = { workspace = true }
revm = { workspace = true }
revmc = { workspace = true }
leveldb = "0.8.6"
tempdir = "0.3.7"
color-eyre = "0.6"
db-key = "0.0.5"
tokio = { version = "1.41.1", features = ["full"] }
once_cell = "1.20.2"
libloading = "0.8"

[build-dependencies]
cbindgen = { workspace = true }
