[package]
name = "revmapi"
version = "0.0.1"
publish = false
description = "Revm Engine FFI API"
repository = "https://github.com/0xEyrie/revmc-ffi"
exclude = [".gitignore"]
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
errno = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
alloy-primitives = { version = "0.8.2", default-features = false, features = [
	"rlp",
] }
revm = { workspace = true }
revmc = { workspace = true }
color-eyre = "0.6"
tokio = { version = "1.41.1", features = ["full"] }
once_cell = "1.20.2"
libloading = "0.8"
sled = "0.34.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
chrono = "0.4.38"
chrono-tz = "0.10.0"
prost.workspace = true
prost-types.workspace = true


[build-dependencies]
cbindgen = { workspace = true }
prost-build = "0.13.4"
