[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
clru = { workspace = true }
parking_lot = { workspace = true }
sha3 = { workspace = true }
