[package]
name = "types"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ethers-core = { version = "2.0" }
revm-primitives = { path = "../primitives", version = "9.0.1", default-features = false }
