[package]
name = "vm"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# revm
revm-interpreter = { path = "../interpreter", version = "10.0.1", default-features = false }
revm = { path = "../revm", version = "14.0.1", default-features = false }
revm-precompile = { path = "../precompile", version = "11.0.1", default-features = false }
